# yaml2bib

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml  nox.yml  pytest.yml  update-readme.yml
docs/: conf.py  index.rst
examples/: README.md  example.bib  example.yaml  replacements.yaml
tests/: __init__.py  test_aiokef.py  test_yaml2bib.py
yaml2bib/: __init__.py  _version.py  _yaml2bib.py
